<resources>
    <string name="app_name">AU22_flashcard</string>
    <string name="add_words">Add words</string>
    <string name="back">Go back</string>
    <string name="save">Save word</string>
    <string name="title">Enter a new word</string>
    <string name="remove_word">Remove words</string>

    <string name="english">Type the English word here</string>
    <string name="swedish">Type the Swedish word here</string>

    <string name="word_to_delete">Click on the word that you wish to delete from the database.</string>
    <string name="remove_a_word">Remove a word</string>
    <string name="remove">Remove</string>
</resources>