<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity">


    <EditText
        android:id="@+id/addWord_englishEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:hint="@string/english"
        android:minHeight="48dp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWord_title" />

    <EditText
        android:id="@+id/addWord_swedishEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/swedish"
        android:minHeight="48dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addWord_englishEditText"
        app:layout_constraintTop_toBottomOf="@+id/addWord_englishEditText" />

    <Button
        android:id="@+id/addWord_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addWord_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/addWord_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="61dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintEnd_toStartOf="@+id/addWord_swedishEditText"
        app:layout_constraintTop_toTopOf="@+id/addWord_swedishEditText"
        app:srcCompat="@drawable/sweden" />

    <ImageView
        android:id="@+id/imageViewasd"
        android:layout_width="45dp"
        android:layout_height="61dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintEnd_toStartOf="@+id/addWord_englishEditText"
        app:layout_constraintTop_toTopOf="@+id/addWord_englishEditText"
        app:srcCompat="@drawable/uk" />


</androidx.constraintlayout.widget.ConstraintLayout>